--- a/content/themes/elements/sass/states/_ie.scss
+++ b/content/themes/elements/sass/states/_ie.scss
@@ -1,3 +1,5 @@
+// Some extra css for the loser in the browser classroom
+
 body.ie{
   main{
     display: block;
@@ -18,6 +20,25 @@ body.ie{
 
     &:last-child{
       margin: 0 auto 0;
+    }
+  }
+
+  footer{
+    > p,
+    ul{
+      line-height: 60px;
+    }
+
+    > p{
+      float: left;
+    }
+
+    ul{
+      float: right;
+
+      img{
+        border: none;
+      }
     }
   }
 }
